RESOLVED FIXED259951
AX: Voice Control cannot access any web content
https://bugs.webkit.org/show_bug.cgi?id=259951
Summary AX: Voice Control cannot access any web content
Tyler Wilcock
Reported 2023-08-08 16:07:28 PDT
...
Attachments
Patch (2.11 KB, patch)
2023-08-08 16:20 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2023-08-08 16:07:40 PDT
Tyler Wilcock
Comment 2 2023-08-08 16:10:54 PDT
Tyler Wilcock
Comment 3 2023-08-08 16:20:10 PDT
chris fleizach
Comment 4 2023-08-08 18:17:01 PDT
Surprised this didn't crash
EWS
Comment 5 2023-08-08 21:55:24 PDT
Committed 266714@main (ff720c419802): <https://commits.webkit.org/266714@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467224 [details].
Note You need to log in before you can comment on or make changes to this bug.