Source/WebKit/WebProcess/WebPage/mac/WKAccessibilityWebPageObjectMac.mm
@@ -105,14 +105,14 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_BEGIN
 - (NSArray *)accessibilityAttributeNames
 ALLOW_DEPRECATED_IMPLEMENTATIONS_END
 {
-    return m_attributeNames.autorelease();
+    return m_attributeNames.get();
 }
 
 ALLOW_DEPRECATED_IMPLEMENTATIONS_BEGIN
 - (NSArray *)accessibilityParameterizedAttributeNames
 ALLOW_DEPRECATED_IMPLEMENTATIONS_END
 {
-    return m_parameterizedAttributeNames.autorelease();
+    return m_parameterizedAttributeNames.get();
 }
 
 ALLOW_DEPRECATED_IMPLEMENTATIONS_BEGIN
